Fix align of the label in vertical mode

--- a/assets/tvs/multitv/css/multitv.css
+++ b/assets/tvs/multitv/css/multitv.css
@@ -13,7 +13,7 @@
 
 .multitv .list li.element.single { padding: 10px; background: none; list-style: none }
 
-.multitv .list li.element label { display: inline-block; width: 150px }
+.multitv .list li.element label { display: inline-block; width: 150px; vertical-align: top }
 .multitv .list li.element select.inline { margin-right: 9px }
 .multitv .list li.element input[type="text"] { margin: 0 3px 5px 0 }
 .multitv .list li.element a.copy, .multitv .list li.element a.remove { position: absolute; right: 22px; top: 7px; background: url('images/add.png') no-repeat left center; display: block; width: 16px; height: 16px; text-indent: -2000px; padding: 0 }
